VariableArityMethods/Code7_error_report.txt
javac errors for Code7.java 
Code7.java:6: error: cannot declare both process(String[]) and process(String...) in Code7
    public static void process(String[] s) {
                       ^
1 error
 
========================= 
ExtendJ errors for Code7.java 
 
========================= 
Eclipse ECJ errors for Code7.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\CodeRepo\VariableArityMethods\Code7.java (at line 2)
	public static void process(String... strings) {
	                   ^^^^^^^^^^^^^^^^^^^^^^^^^^
Duplicate method process(String...) in type Code7
----------
2. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\CodeRepo\VariableArityMethods\Code7.java (at line 6)
	public static void process(String[] s) {
	                   ^^^^^^^^^^^^^^^^^^^
Duplicate method process(String[]) in type Code7
----------
2 problems (2 errors)
